--- a/series.html
+++ b/series.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-brSeries">
     <link rel="stylesheet" href="style.css">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+
     <header class="cabecalho">         
         <nav class="nav__menu">  
             <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" alt="Logo Netflix" width="100" height="50">          
@@ -22,9 +23,7 @@
     </header>
     <main class="container"> 
         <section class="banner__intro">
-            <h1>Bem-vindo à Netflix</h1>
-            <p>Assista a séries e filmes ilimitados, onde e quando quiser.</p>
-            <p>Assista agora mesmo!</p>
+            <h1>Confira as melhores Séries</h1>            
         </section>
         <section class="banner__image">
             <img src="https://m.media-amazon.com/images/M/MV5BYjA3NDkwNzktNjJkYi00ODNhLWFhYzQtYzk5NjU4MDM0OWZmXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg;" alt="Cobra Kai" width="300" height="450">
@@ -40,6 +39,6 @@
     <footer>
 
     </footer>
-
+    
 </body>
 </html>
